--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "my-notes",
   "version": "0.1.0",
+  "homepage": "http://radnavr.github.io/my_notes",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
-    "react-textarea-autosize": "^8.3.4",
-    "web-vitals": "^2.1.4"
+    "react-textarea-autosize": "^8.3.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
